<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dex_added_class" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/dex_added_class"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dex_modified_class" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/dex_modified_class"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dex_removed_class" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/dex_removed_class"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_jni" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/library_jni"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_dependency" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/library_dependency"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resource" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icon"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_added" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/asset_added"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_modified" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/asset_modified"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_removed" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/asset_removed"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            tools:src="@drawable/updated" />

    </LinearLayout>

</ScrollView>